ankabut/libs/parser/src/lib/HashemiGrammerParser.ts
// Generated from ../HashemiGrammer.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { HashemiGrammerListener } from "./HashemiGrammerListener";
import { HashemiGrammerVisitor } from "./HashemiGrammerVisitor";


export class HashemiGrammerParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly WS = 33;
	public static readonly COMMENT = 34;
	public static readonly LINE_COMMENT = 35;
	public static readonly IDENTIFIER = 36;
	public static readonly STRING_LITERAL = 37;
	public static readonly NUMERIC_LITERAL = 38;
	public static readonly RULE_sourceFile = 0;
	public static readonly RULE_function = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_statement = 3;
	public static readonly RULE_while_statement = 4;
	public static readonly RULE_if_statement = 5;
	public static readonly RULE_return_statement = 6;
	public static readonly RULE_expression = 7;
	public static readonly RULE_logic_term = 8;
	public static readonly RULE_logic_factor = 9;
	public static readonly RULE_arithmetic = 10;
	public static readonly RULE_term = 11;
	public static readonly RULE_factor = 12;
	public static readonly RULE_member_expression = 13;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"sourceFile", "function", "block", "statement", "while_statement", "if_statement", 
		"return_statement", "expression", "logic_term", "logic_factor", "arithmetic", 
		"term", "factor", "member_expression",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'bebin'", "'('", "','", "')'", "'{'", "'}'", "'khob'", "';'", 
		"'badi'", "'debugger'", "'ta'", "') bood'", "'age'", "'na?'", "'bede'", 
		"'||'", "'&&'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'='", "'.'", "'['", "']'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "WS", "COMMENT", 
		"LINE_COMMENT", "IDENTIFIER", "STRING_LITERAL", "NUMERIC_LITERAL",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(HashemiGrammerParser._LITERAL_NAMES, HashemiGrammerParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return HashemiGrammerParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "HashemiGrammer.g4"; }

	// @Override
	public get ruleNames(): string[] { return HashemiGrammerParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return HashemiGrammerParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(HashemiGrammerParser._ATN, this);
	}
	// @RuleVersion(0)
	public sourceFile(): SourceFileContext {
		let _localctx: SourceFileContext = new SourceFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, HashemiGrammerParser.RULE_sourceFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 28;
			this.function();
			this.state = 32;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === HashemiGrammerParser.T__0) {
				{
				{
				this.state = 29;
				this.function();
				}
				}
				this.state = 34;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 35;
			this.match(HashemiGrammerParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function(): FunctionContext {
		let _localctx: FunctionContext = new FunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, HashemiGrammerParser.RULE_function);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this.match(HashemiGrammerParser.T__0);
			this.state = 38;
			this.match(HashemiGrammerParser.IDENTIFIER);
			this.state = 39;
			_localctx._s = this.match(HashemiGrammerParser.T__1);
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === HashemiGrammerParser.IDENTIFIER) {
				{
				this.state = 40;
				this.match(HashemiGrammerParser.IDENTIFIER);
				this.state = 45;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === HashemiGrammerParser.T__2) {
					{
					{
					this.state = 41;
					this.match(HashemiGrammerParser.T__2);
					this.state = 42;
					this.match(HashemiGrammerParser.IDENTIFIER);
					}
					}
					this.state = 47;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 50;
			this.match(HashemiGrammerParser.T__3);
			this.state = 51;
			_localctx._body = this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, HashemiGrammerParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			_localctx._s = this.match(HashemiGrammerParser.T__4);
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HashemiGrammerParser.T__1) | (1 << HashemiGrammerParser.T__6) | (1 << HashemiGrammerParser.T__8) | (1 << HashemiGrammerParser.T__9) | (1 << HashemiGrammerParser.T__10) | (1 << HashemiGrammerParser.T__12) | (1 << HashemiGrammerParser.T__14))) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (HashemiGrammerParser.IDENTIFIER - 36)) | (1 << (HashemiGrammerParser.STRING_LITERAL - 36)) | (1 << (HashemiGrammerParser.NUMERIC_LITERAL - 36)))) !== 0)) {
				{
				{
				this.state = 54;
				this.statement();
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 60;
			_localctx._e = this.match(HashemiGrammerParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, HashemiGrammerParser.RULE_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HashemiGrammerParser.T__10:
				{
				this.state = 62;
				this.while_statement();
				}
				break;
			case HashemiGrammerParser.T__6:
				{
				this.state = 63;
				_localctx._b = this.match(HashemiGrammerParser.T__6);
				this.state = 64;
				this.match(HashemiGrammerParser.T__7);
				}
				break;
			case HashemiGrammerParser.T__8:
				{
				this.state = 65;
				_localctx._c = this.match(HashemiGrammerParser.T__8);
				this.state = 66;
				this.match(HashemiGrammerParser.T__7);
				}
				break;
			case HashemiGrammerParser.T__12:
				{
				this.state = 67;
				this.if_statement();
				}
				break;
			case HashemiGrammerParser.T__14:
				{
				this.state = 68;
				this.return_statement();
				}
				break;
			case HashemiGrammerParser.T__1:
			case HashemiGrammerParser.IDENTIFIER:
			case HashemiGrammerParser.STRING_LITERAL:
			case HashemiGrammerParser.NUMERIC_LITERAL:
				{
				this.state = 69;
				this.expression();
				this.state = 70;
				this.match(HashemiGrammerParser.T__7);
				}
				break;
			case HashemiGrammerParser.T__9:
				{
				this.state = 72;
				_localctx._d = this.match(HashemiGrammerParser.T__9);
				this.state = 73;
				this.match(HashemiGrammerParser.T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public while_statement(): While_statementContext {
		let _localctx: While_statementContext = new While_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, HashemiGrammerParser.RULE_while_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 76;
			_localctx._w = this.match(HashemiGrammerParser.T__10);
			this.state = 77;
			this.match(HashemiGrammerParser.T__1);
			this.state = 78;
			_localctx._condition = this.expression();
			this.state = 79;
			this.match(HashemiGrammerParser.T__11);
			this.state = 80;
			_localctx._body = this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public if_statement(): If_statementContext {
		let _localctx: If_statementContext = new If_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, HashemiGrammerParser.RULE_if_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			_localctx._i = this.match(HashemiGrammerParser.T__12);
			this.state = 83;
			this.match(HashemiGrammerParser.T__1);
			this.state = 84;
			_localctx._condition = this.expression();
			this.state = 85;
			this.match(HashemiGrammerParser.T__11);
			this.state = 86;
			_localctx._then = this.block();
			this.state = 89;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === HashemiGrammerParser.T__13) {
				{
				this.state = 87;
				this.match(HashemiGrammerParser.T__13);
				this.state = 88;
				this.block();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public return_statement(): Return_statementContext {
		let _localctx: Return_statementContext = new Return_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, HashemiGrammerParser.RULE_return_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			_localctx._r = this.match(HashemiGrammerParser.T__14);
			this.state = 93;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === HashemiGrammerParser.T__1 || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (HashemiGrammerParser.IDENTIFIER - 36)) | (1 << (HashemiGrammerParser.STRING_LITERAL - 36)) | (1 << (HashemiGrammerParser.NUMERIC_LITERAL - 36)))) !== 0)) {
				{
				this.state = 92;
				this.expression();
				}
			}

			this.state = 95;
			this.match(HashemiGrammerParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, HashemiGrammerParser.RULE_expression);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.logic_term();
			this.state = 102;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 98;
					_localctx._op = this.match(HashemiGrammerParser.T__15);
					this.state = 99;
					this.logic_term();
					}
					}
				}
				this.state = 104;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public logic_term(): Logic_termContext {
		let _localctx: Logic_termContext = new Logic_termContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, HashemiGrammerParser.RULE_logic_term);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.logic_factor();
			this.state = 110;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 106;
					_localctx._op = this.match(HashemiGrammerParser.T__16);
					this.state = 107;
					this.logic_factor();
					}
					}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public logic_factor(): Logic_factorContext {
		let _localctx: Logic_factorContext = new Logic_factorContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, HashemiGrammerParser.RULE_logic_factor);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.arithmetic();
			this.state = 116;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 114;
				_localctx._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HashemiGrammerParser.T__17) | (1 << HashemiGrammerParser.T__18) | (1 << HashemiGrammerParser.T__19) | (1 << HashemiGrammerParser.T__20) | (1 << HashemiGrammerParser.T__21) | (1 << HashemiGrammerParser.T__22))) !== 0))) {
					_localctx._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 115;
				this.arithmetic();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arithmetic(): ArithmeticContext {
		let _localctx: ArithmeticContext = new ArithmeticContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, HashemiGrammerParser.RULE_arithmetic);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			this.term();
			this.state = 123;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 119;
					_localctx._op = this._input.LT(1);
					_la = this._input.LA(1);
					if (!(_la === HashemiGrammerParser.T__23 || _la === HashemiGrammerParser.T__24)) {
						_localctx._op = this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					this.state = 120;
					this.term();
					}
					}
				}
				this.state = 125;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let _localctx: TermContext = new TermContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, HashemiGrammerParser.RULE_term);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this.factor();
			this.state = 131;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 127;
					_localctx._op = this._input.LT(1);
					_la = this._input.LA(1);
					if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HashemiGrammerParser.T__25) | (1 << HashemiGrammerParser.T__26) | (1 << HashemiGrammerParser.T__27))) !== 0))) {
						_localctx._op = this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					this.state = 128;
					this.factor();
					}
					}
				}
				this.state = 133;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public factor(): FactorContext {
		let _localctx: FactorContext = new FactorContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, HashemiGrammerParser.RULE_factor);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HashemiGrammerParser.IDENTIFIER:
				{
				this.state = 134;
				this.match(HashemiGrammerParser.IDENTIFIER);
				this.state = 137;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
				case 1:
					{
					this.state = 135;
					this.member_expression();
					}
					break;

				case 2:
					// tslint:disable-next-line:no-empty
					{
					}
					break;
				}
				}
				break;
			case HashemiGrammerParser.STRING_LITERAL:
				{
				this.state = 139;
				this.match(HashemiGrammerParser.STRING_LITERAL);
				}
				break;
			case HashemiGrammerParser.NUMERIC_LITERAL:
				{
				this.state = 140;
				this.match(HashemiGrammerParser.NUMERIC_LITERAL);
				}
				break;
			case HashemiGrammerParser.T__1:
				{
				this.state = 141;
				_localctx._s = this.match(HashemiGrammerParser.T__1);
				this.state = 142;
				_localctx._expr = this.expression();
				this.state = 143;
				_localctx._e = this.match(HashemiGrammerParser.T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public member_expression(): Member_expressionContext {
		let _localctx: Member_expressionContext = new Member_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, HashemiGrammerParser.RULE_member_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 167;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HashemiGrammerParser.T__1:
				{
				this.state = 147;
				this.match(HashemiGrammerParser.T__1);
				this.state = 156;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === HashemiGrammerParser.T__1 || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (HashemiGrammerParser.IDENTIFIER - 36)) | (1 << (HashemiGrammerParser.STRING_LITERAL - 36)) | (1 << (HashemiGrammerParser.NUMERIC_LITERAL - 36)))) !== 0)) {
					{
					this.state = 148;
					this.expression();
					this.state = 153;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === HashemiGrammerParser.T__2) {
						{
						{
						this.state = 149;
						this.match(HashemiGrammerParser.T__2);
						this.state = 150;
						this.expression();
						}
						}
						this.state = 155;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 158;
				_localctx._e = this.match(HashemiGrammerParser.T__3);
				}
				break;
			case HashemiGrammerParser.T__28:
				{
				this.state = 159;
				this.match(HashemiGrammerParser.T__28);
				this.state = 160;
				this.expression();
				}
				break;
			case HashemiGrammerParser.T__29:
				{
				this.state = 161;
				this.match(HashemiGrammerParser.T__29);
				this.state = 162;
				this.match(HashemiGrammerParser.IDENTIFIER);
				}
				break;
			case HashemiGrammerParser.T__30:
				{
				this.state = 163;
				this.match(HashemiGrammerParser.T__30);
				this.state = 164;
				this.expression();
				this.state = 165;
				this.match(HashemiGrammerParser.T__31);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 170;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
			case 1:
				{
				this.state = 169;
				this.member_expression();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!HashemiGrammerParser.__ATN) {
			HashemiGrammerParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(HashemiGrammerParser._serializedATN));
		}

		return HashemiGrammerParser.__ATN;
	}

}

export class SourceFileContext extends ParserRuleContext {
	public function(): FunctionContext[];
	public function(i: number): FunctionContext;
	public function(i?: number): FunctionContext | FunctionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(FunctionContext);
		} else {
			return this.getRuleContext(i, FunctionContext);
		}
	}
	public EOF(): TerminalNode { return this.getToken(HashemiGrammerParser.EOF, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return HashemiGrammerParser.RULE_sourceFile; }
	// @Override
	public enterRule(listener: HashemiGrammerListener): void {
		if (listener.enterSourceFile) {
			listener.enterSourceFile(this);
		}
	}
	// @Override
	public exitRule(listener: HashemiGrammerListener): void {
		if (listener.exitSourceFile) {
			listener.exitSourceFile(this);
		}
	}
	// @Override
	public accept<Result>(visitor: HashemiGrammerVisitor<Result>): Result {
		if (visitor.visitSourceFile) {
			return visitor.visitSourceFile(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionContext extends ParserRuleContext {
	public _s: Token;
	public _body: BlockContext;
	public IDENTIFIER(): TerminalNode[];
	public IDENTIFIER(i: number): TerminalNode;
	public IDENTIFIER(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(HashemiGrammerParser.IDENTIFIER);
		} else {
			return this.getToken(HashemiGrammerParser.IDENTIFIER, i);
		}
	}
	public block(): BlockContext {
		return this.getRuleContext(0, BlockContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return HashemiGrammerParser.RULE_function; }
	// @Override
	public enterRule(listener: HashemiGrammerListener): void {
		if (listener.enterFunction) {
			listener.enterFunction(this);
		}
	}
	// @Override
	public exitRule(listener: HashemiGrammerListener): void {
		if (listener.exitFunction) {
			listener.exitFunction(this);
		}
	}
	// @Override
	public accept<Result>(visitor: HashemiGrammerVisitor<Result>): Result {
		if (visitor.visitFunction) {
			return visitor.visitFunction(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class BlockContext extends ParserRuleContext {
	public _s: Token;
	public _e: Token;
	public statement(): StatementContext[];
	public statement(i: number): StatementContext;
	public statement(i?: number): StatementContext | StatementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(StatementContext);
		} else {
			return this.getRuleContext(i, StatementContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return HashemiGrammerParser.RULE_block; }
	// @Override
	public enterRule(listener: HashemiGrammerListener): void {
		if (listener.enterBlock) {
			listener.enterBlock(this);
		}
	}
	// @Override
	public exitRule(listener: HashemiGrammerListener): void {
		if (listener.exitBlock) {
			listener.exitBlock(this);
		}
	}
	// @Override
	public accept<Result>(visitor: HashemiGrammerVisitor<Result>): Result {
		if (visitor.visitBlock) {
			return visitor.visitBlock(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementContext extends ParserRuleContext {
	public _b: Token;
	public _c: Token;
	public _d: Token;
	public while_statement(): While_statementContext | undefined {
		return this.tryGetRuleContext(0, While_statementContext);
	}
	public if_statement(): If_statementContext | undefined {
		return this.tryGetRuleContext(0, If_statementContext);
	}
	public return_statement(): Return_statementContext | undefined {
		return this.tryGetRuleContext(0, Return_statementContext);
	}
	public expression(): ExpressionContext | undefined {
		return this.tryGetRuleContext(0, ExpressionContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return HashemiGrammerParser.RULE_statement; }
	// @Override
	public enterRule(listener: HashemiGrammerListener): void {
		if (listener.enterStatement) {
			listener.enterStatement(this);
		}
	}
	// @Override
	public exitRule(listener: HashemiGrammerListener): void {
		if (listener.exitStatement) {
			listener.exitStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: HashemiGrammerVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

